Close #259: Follow the XDG base directory specification
After dropping Qt4 support, the Qt5 QStandardPaths class
can be used to replace my implementation of directory discovery.

QStandardPaths follows the XDG specification.

--- a/Local.mak.in
+++ b/Local.mak.in
@@ -6,7 +6,7 @@ export TOPDIR=@abs_srcdir@
 export VERSION=@XCA_VERSION@
 export HOST=@HOST@
 
-CPPFLAGS+=-Wall -Wextra -DXCA_PREFIX=\"${xca_prefix}\" -DETC=\"@sysconfdir@\" -DDOCDIR=\"@docdir@\"
+CPPFLAGS+=-Wall -Wextra -DETC=\"@sysconfdir@\" -DDOCDIR=\"@docdir@\"
 CFLAGS+=-O2 -ggdb -std=c++11 @CXXFLAGS@
 LIBS=@LIBS@
 EXTRA_VERSION=@EXTRA_VERSION@
