Updated slovak translation

--- a/misc/xca.desktop
+++ b/misc/xca.desktop
@@ -8,6 +8,7 @@ Comment[fi]=Graafinen X.509-varmenteiden hallintatyökalu
 Comment[fr]=Création et gestion de certificats conformes à la norme X.509
 Comment[hr]=Grafičko korisničko sučelje za upravljanje životnim ciklusom X.509 sukladnih potvrda
 Comment[nl]=Een grafische gebruikers interface voor behandeling en uitgifte van X.509 conforme certificaten
+Comment[sk]=GUI na spracovanie a vydávanie Certifikátov X.509
 Exec=xca %F
 Icon=xca
 Terminal=false
