Close #247: improve Apple silicon (M1) compatibility
Put $(brew --prefix)/include and $(brew --prefix)/lib
at the end of the list to allow the specific openssl/qt includes
and libs to take precedence.

--- a/configure.ac
+++ b/configure.ac
@@ -275,8 +275,8 @@ AC_CHECK_HEADER(ltdl.h, , [
 
 # Finally collect the compiler flags
 #####################################
-CXXFLAGS="${CXXFLAGS} ${OPENSSL_CFLAGS} ${QT_CFLAGS}"
-LIBS="${LIBS} ${OPENSSL_LIBS} ${QT_LIBS} -lstdc++"
+CXXFLAGS="${OPENSSL_CFLAGS} ${QT_CFLAGS} ${CXXFLAGS}"
+LIBS="${OPENSSL_LIBS} ${QT_LIBS} -lstdc++ ${LIBS}"
 
 # Just give it a try .....
 ##########################
