Switch from autotools/qmake to cmake
Why?
 - QT will switch from qmake to cmake sooner or later.
 - autotools are good for unix-ish systems, cmake also for
   macOS and Xcode as well as Windows and VS-code
 - Cross compiling the windows-binaries on linux
   is not very helpful to attract windows-centric
   developers.

Also drop qmake's xca.pro
Generate man-page and sphinx sources of commandline arguments
during build by executing xca (xcadoc.cpp).
Generating Version-patchlevel and git hash is now also
OS independent.

--- a/doc/conf.py.in
+++ b/doc/conf.py.in
@@ -17,7 +17,7 @@
 
 # -- Project information -----------------------------------------------------
 
-project = '@PACKAGE_TARNAME@'
+project = '@PROJECT_NAME@'
 copyright = '2021, Christian Hohnstädt'
 author = 'Christian Hohnstädt'
 
