PwDialog: Split into cmdline-core and GUI
Another step to split core and GUI components

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -40,4 +40,5 @@ db_x509super.cpp	pki_evp.cpp		x509v3ext.h
 db_x509super.h		pki_evp.h		xfile.h
 dhgen.cpp		dhgen.h			XcaProgress.cpp
 XcaProgress.h		XcaWarningCore.cpp	XcaWarningCore.h
+PwDialogCore.cpp	PwDialogCore.h
 )
