--- a/misc/CMakeLists.txt
+++ b/misc/CMakeLists.txt
@@ -1,8 +1,19 @@
 
+set(S "${PROJECT_SOURCE_DIR}/misc")
+set(D "${PROJECT_BINARY_DIR}/misc")
+file(MAKE_DIRECTORY ${D})
+
+configure_file(${S}/Info.plist.in ${D}/Info.plist)
+
+set(CPACK_RESOURCE_FILE_LICENSE "${S}/copyright.rtf")
+set(CPACK_BUNDLE_PLIST "${D}/Info.plist")
+set_property(TARGET ${PROJECT_NAME}
+	     PROPERTY MACOSX_BUNDLE_INFO_PLIST "${D}/Info.plist")
+
 ##### XCA Templates
 
 foreach(templ CA.xca TLS_server.xca TLS_client.xca)
-  list(APPEND XCA_TEMPLATES ${CMAKE_CURRENT_SOURCE_DIR}/${templ})
+  list(APPEND XCA_TEMPLATES ${S}/${templ})
 endforeach()
 target_sources(${CMAKE_PROJECT_NAME} PRIVATE ${XCA_TEMPLATES})
 list(APPEND APP_RESOURCES "${XCA_TEMPLATES}")
@@ -10,36 +21,33 @@ list(APPEND APP_RESOURCES "${XCA_TEMPLATES}")
 ##### Text Files ids.txt eku.txt dn.txt
 
 macro(Text_header file)
-  add_custom_command(OUTPUT ${file}.txt
+  add_custom_command(OUTPUT "${D}/${file}.txt"
         COMMAND ${CMAKE_COMMAND} -DFILE=${file}
-		-DSRC="${CMAKE_CURRENT_SOURCE_DIR}"
+		-DSRC="${S}" -DDST="${D}"
                 -P "${PROJECT_SOURCE_DIR}/cmake/text_header_file.cmake"
-        DEPENDS ${file}.text preamble.txt
+        DEPENDS "${S}/${file}.text" "${S}/preamble.txt"
   )
-  list(APPEND TEXT_FILES "${CMAKE_CURRENT_BINARY_DIR}/${file}.txt")
-  list(APPEND SRC_TEXT_FILES "${CMAKE_CURRENT_SOURCE_DIR}/${file}.text")
+  list(APPEND TEXT_FILES "${D}/${file}.txt")
 endmacro()
 
 Text_header(dn)
 Text_header(eku)
 Text_header(oids)
 
-add_custom_target(text_files ALL DEPENDS ${TEXT_FILES})
-target_sources(${CMAKE_PROJECT_NAME} PRIVATE ${SRC_TEXT_FILES})
-
+target_sources(${CMAKE_PROJECT_NAME} PRIVATE ${TEXT_FILES})
 list(APPEND APP_RESOURCES ${TEXT_FILES})
 
-if (UNIX)
+if (UNIX AND NOT APPLE)
   install(FILES ${TEXT_FILES} ${XCA_TEMPLATES}
         DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}
   )
-  install(FILES xca.desktop
+  install(FILES misc/xca.desktop
         DESTINATION ${CMAKE_INSTALL_DATADIR}/applications
   )
-  install(FILES xca.completion
+  install(FILES misc/xca.completion
         DESTINATION ${CMAKE_INSTALL_DATADIR}/bash-completion/completions/xca
   )
-  install(FILES xca.xml DESTINATION ${CMAKE_INSTALL_DATADIR}/mime/packages)
+  install(FILES misc/xca.xml
+	DESTINATION ${CMAKE_INSTALL_DATADIR}/mime/packages
+  )
 endif()
-
-set(APP_RESOURCES ${APP_RESOURCES} PARENT_SCOPE)
