--- a/img/CMakeLists.txt
+++ b/img/CMakeLists.txt
@@ -32,6 +32,7 @@ if(APPLE)
     target_sources(${CMAKE_PROJECT_NAME} PRIVATE ${ICONS})
   endif()
   set(CPACK_DMG_BACKGROUND_IMAGE "${S}/bigcert.png")
+  set(CPACK_BUNDLE_ICON ${ICONS})
 
 endif()
 
