Consolidate export types and format in pki_export class
Move the descriptons from the ExportDialog into the
new pki_export class.

Also translate the exportType::etype to F_* flags

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -41,5 +41,5 @@ db_x509super.h		pki_evp.h		xfile.h
 dhgen.cpp		dhgen.h			XcaProgress.cpp
 XcaProgress.h		XcaWarningCore.cpp	XcaWarningCore.h
 PwDialogCore.cpp	PwDialogCore.h		digest.h
-digest.cpp
+digest.cpp		pki_export.cpp
 )
